--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,32 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.login-wrapper {
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+}
+
+.login-content {
+    padding: 20px;
+    max-width: 50%;
+}
+
+.application-title {
+    font-weight: bold;
+    font-size: 36px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.login-title {
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+.rememberme-box {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.spaced {
+    padding-top: 10px;
+}
